corrected the text spacing in the about section artist name

--- a/Portfolio/less/left-column.less
+++ b/Portfolio/less/left-column.less
@@ -519,6 +519,7 @@ footer{
     width: 50%;
     text-align: center;
     margin: auto;
+    padding: 0 10px;
     position: absolute;
     left: 0%;
     right: 0%;
